[gd_scene load_steps=9 format=3 uid="uid://c3kf4xafj2n8j"]

[ext_resource type="Script" uid="uid://cvm2dyj5kxbga" path="res://scripts/card/card_visual.gd" id="1_15jvd"]
[ext_resource type="Script" uid="uid://cc3k7bhrgixq4" path="res://scripts/card/card_interaction.gd" id="2_cardint"]
[ext_resource type="Texture2D" uid="uid://cy2uxfupfhatc" path="res://assets/graphics/colored-cards.png" id="2_ey3ig"]
[ext_resource type="Shader" uid="uid://ddlwiup30erc1" path="res://assets/shaders/card.gdshader" id="3_shader"]

[sub_resource type="AtlasTexture" id="AtlasTexture_6u04p"]
atlas = ExtResource("2_ey3ig")
region = Rect2(56, 400, 56, 80)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_card"]
shader = ExtResource("3_shader")
shader_parameter/fov = 90.0
shader_parameter/cull_back = true
shader_parameter/y_rot = 0.0
shader_parameter/x_rot = 0.0
shader_parameter/inset = 0.0
shader_parameter/rect_size = Vector2(56, 80)

[sub_resource type="ViewportTexture" id="ViewportTexture_card"]
viewport_path = NodePath("Viewport")

[sub_resource type="RectangleShape2D" id="1_0"]
size = Vector2(56, 80)

[node name="Card" type="Node2D"]
scale = Vector2(4, 4)
script = ExtResource("1_15jvd")

[node name="Viewport" type="SubViewport" parent="."]
disable_3d = true
transparent_bg = true
size = Vector2i(56, 80)
render_target_update_mode = 4

[node name="InnerSprite" type="Sprite2D" parent="Viewport"]
position = Vector2(28, 40)
texture = SubResource("AtlasTexture_6u04p")

[node name="OuterSprite" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_card")
texture = SubResource("ViewportTexture_card")

[node name="ShadowSprite" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 0.8)
z_index = -1
position = Vector2(0, -0.25)
texture = SubResource("ViewportTexture_card")
offset = Vector2(12, 10)

[node name="ClickArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClickArea"]
visible = false
shape = SubResource("1_0")

[node name="Interaction" type="Node" parent="."]
script = ExtResource("2_cardint")
